force-app/main/default/objects/Error_Handler__c/Error_Handler__c.object-meta.xml
<CustomObject>
    <label>Error Handler</label>
    <nameField>
        <displayFormat>WB-{00000}</displayFormat>
        <label>Error Handler Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Handlers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>