force-app/main/default/objects/Error_Handler__c/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <label>Method Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>